--- a/css/_about.scss
+++ b/css/_about.scss
@@ -24,7 +24,11 @@
 .about-r1-c1 {
     @include column(12);
 
-    p { margin-bottom: 1rem; }
+    p { 
+        margin-bottom: 1rem;
+
+        &:last-of-type { margin-bottom: 0; }
+    }
 
     .float-1, .float-2 {
         width: 300px;
@@ -45,7 +49,6 @@
     .float-2 {
         float: left;
         margin-right: 20px;
-        margin-bottom: 0;
     }
 }
 
